fix amount of whitespace

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -165,7 +165,7 @@ header {
 
 /* == WHITE SECTION == */
 .whitespace {
-  margin: 7vw;
+  margin: 5vw;
 }
 /* == HOME SECTION == */
 
